For 1.18.10:
	- PointLight status now same as other lights - uses lightState.

	- memory corruption in "default MF*" values fixed in createNewX3DNode.

	- memory leak in OcclusionQueries fixed.

	- some parser problems fixed. (some more identified)

	- fixed problem in *Background nodes when sky and ground entries were empty

	- X3dToVrml97.xslt changed - it was adding EXTERNPROTOS for 
	  nodes supported in FreeWRL.

	- Textures had a threading issue - registration code rewritten.

	- MovieTexture did not work with the new parser; fixed.

	- Makefile.PL - javascript library not copied over - fixed.

For 1.18.9:
	- no perl parser at all.

	- perl runtime code removed.

	- XLib error handler.

	- New Makefile.PL and new build process.
		- build revamp in progress - 1.18.9 has better linking on linux as
		  compared to 1.18.8 and earlier.



For 1.18.5:
	- Sound and AudioClip nodes should work again - problem with add_first and
	  these nodes.

	- EAI/SAI should be close to working.

For 1.18.4:
	- javascript code that calls perl being rewritten.
		(tests/52 added - uses createVrmlFromURL)

	- bug in OpenGL window size fixed. (affected TouchSensors)

For 1.18.3: Firefox plugin code -at least now it brings FreeWRL up. Have big problem
	with reparenting FreeWRL window - fails at plugin XFlush call.

For 1.18.2:
	- Desktop integration on Linux platforms. (Sarah Dumoulin)

	- more automated build in Makefile.PL (John Stewart) to better handle
	  Motif library inclusion. (including code rewrites in CFrontEnd)

For 1.18.1:
	- more PROTO work for experimental parser (Daniek Kraft)

	- Linux browser plugin reverified; should now work quite well!

	- command line invocation of http:// files restored. (was broken in 1.17).

	- remove requirement for GLwDrawA.h.


For 1.17.7:
	- javascript problem creating some nodes that had FreeWRLPTR defined fields fixed.

For 1.17.6;
	- now scans scientific notation floats correctly.

For 1.17: